<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  >
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/song_title_label"
    style="?android:listSeparatorTextViewStyle"
    />
  <EditText android:id="@+id/song_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:hint="@string/song_title_hint"
    />
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/song_details_label"
    style="?android:listSeparatorTextViewStyle"
    />
  <Button android:id="@+id/song_date"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    />
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/recording"
    style="?android:listSeparatorTextViewStyle"
    />
  <LinearLayout
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center_horizontal"
		>
		<Button android:id="@+id/recordButton"
		    android:layout_width="100dp"
			android:layout_height="100dp"
			android:background="@drawable/record"/>

      
  </LinearLayout>
  
  <LinearLayout
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal"
	android:gravity="center_horizontal"
	>
  		<Button
    	  	android:id="@+id/playButton"
    		android:layout_width="100dp"
    		android:layout_height="wrap_content"
     	 	android:text="@string/play" />
  </LinearLayout>
  
  <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:max="20000"
  		android:progress="10000"/>
  
</LinearLayout>



